2.7 (unreleased)
----------------

- Add ability to enable photo functionality by event id.


2.6 (2019-02-16)
----------------

- Add ability to recalculate the date in gprs messages.


2.5 (2019-01-13)
----------------

- Add commands for the deletion of files on a device.


2.4 (2019-01-13)
----------------

- Add code to handle file listings including files with non-unicode file names.


2.3 (2018-10-21)
----------------

- Rename field in B46 message. Field was called "number", now called "count" to be more descriptive as to its' purpose.
- Add doctests for all command building functions.
- Add documentation for all command building functions.
- Add configuration for pytest to run the doctests.
- Add pytest to the test-requirements.txt file.
- Add junit.xml as the output of the pytest run.
- Add coverage reporting via pytest-cov
- Document bulk of the library functions and classes.


2.2 (2018-10-13)
----------------

- Implement B46 command for setting of camera parameters.


2.1 (2018-09-16)
----------------

- Convert print statements to debug logs.


2.0 (2018-09-02)
----------------

- Change the ordering of the bits processed in the AAA command. Bit ordering is reversed compared to the C01 command.


1.15 (2018-09-01)
-----------------

- Add helper functions to get analogue and digital pin states.


1.14 (2018-09-01)
-----------------

- Add ability to set the status of all pins through the C01 command.
- Add ability to set a single pin.
- Add pin range checking.
- Update stub processor to return the correct device model for firmware update testing.


1.13 (2018-08-12)
-----------------

- Add commands for restart of gps and restart of gsm.


1.12 (2018-08-08)
-----------------

- Add ability to recalculate leftover data, for use when changing parameters.


1.11 (2018-07-07)
-----------------

- Update TaxiData object to return strings rather than bytes.


1.10 (2018-07-07)
-----------------
